# wolfram_script_cmake

./: CMakeLists.txt
